extract-doctests/tests/ui/bad_attr_ident1.rs
use extract_doctests::extract_doctests;

#[extract_doctests(bad_attr(template = ""))]
fn placeholder() {}

fn main() {}
